# confidence-scheduled-decoding

./: README.md  feed-entry.json  pyproject.toml  requirements.txt
notebooks/: 00_context.ipynb  07_verification_resource.ipynb  13_confidence_scheduling.ipynb  17_semi_autoregression.ipynb  17_semi_autoregressive_drafting.ipynb  23_throughput_objective.ipynb  29_hardware_aware_scheduling.ipynb  37_operating_regimes.ipynb  43_resource_allocation.ipynb  49_adaptive_ai_infrastructure.ipynb  53_distributed_scheduling.ipynb  59_cluster_optimization.ipynb  61_telemetry_dataset.ipynb  67_policy_geometry.ipynb  67_policy_learning_v1.ipynb  71_replay_lifts_policy.ipynb
report_pages/: 00.html  07.html  13.html  17.html  23.html  29.html  37.html  43.html  49.html
scripts/: make_zip.sh
src/confidence_scheduled_decoding/: __init__.py  scheduler.py
